fix #39067: Day off does not show correctly in Shift trade

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -592,7 +592,7 @@ input[type=search]::-ms-clear {
 	max-width: 70px;
 }
 
-.shift-trade-my-schedule{
+.shift-trade-request-my-schedule{
 	width:100px;
 	display:inline-block;
 	margin-top:22px;
